--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:padding="16dp">
 
     <LinearLayout
@@ -83,6 +84,7 @@
             android:backgroundTint="@color/primarycolour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_black"
             android:text="@string/masuk"/>
@@ -97,23 +99,11 @@
             android:text="Lupa Password"
             />
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:id="@+id/cardViewGoogle"-->
-<!--            app:cardElevation="5dp"-->
-<!--            app:cardCornerRadius="50dp"-->
-<!--            app:contentPadding="10dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_width="200dp"-->
-<!--            android:layout_marginTop="16dp"-->
-<!--            android:layout_height="50dp">-->
-
-<!--            <ImageView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/google_logo"-->
-<!--                android:layout_gravity="center" />-->
-
-<!--        </androidx.cardview.widget.CardView>-->
+        <com.google.android.gms.common.SignInButton
+            android:layout_gravity="center"
+            android:id="@+id/googleSignInButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewDaftarDisini"
