--- a/app/src/main/res/layout/fragment_create_schedule.xml
+++ b/app/src/main/res/layout/fragment_create_schedule.xml
@@ -50,6 +50,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- TextInputLayout untuk nama ustadz -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ustadzNameInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/timeSpinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_gravity="center"
+            android:id="@+id/ustadzNameEditText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="Nama Ustadz" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <!-- Tombol Buat Jadwal -->
     <Button
         android:backgroundTint="@color/primarycolour"
@@ -58,7 +77,7 @@
         android:layout_height="wrap_content"
         android:text="Buat Jadwal"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/timeSpinner"
+        app:layout_constraintTop_toBottomOf="@id/ustadzNameInputLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
